<resources>
  <string name="ticket">Авиабилеты</string>
  <string name="hotel">Отели</string>
  <string name="map">Короче</string>
  <string name="subscribe">Подписки</string>
  <string name="profile">Профиль</string>

  <string name="currency_symbol">%1$s ₽</string>
  <string name="error">Что-то пошло не так проверьте подключение к интернету</string>

  <string name="search_tickets">Поиск дешевых\nавиабилетов</string>
  <string name="hint_from">Откуда - Москва</string>
  <string name="hint_to">Куда - Турция</string>
  <string name="title_music">Музыкально отлететь</string>
  <string name="price">от %1$s</string>

  <string name="hard_route">Сложный маршрут</string>
  <string name="any_place">Куда угодно</string>
  <string name="weekend">Выходные</string>
  <string name="hot_ticket">Горячие билеты</string>
  <string name="tag_search">Популярное направление</string>

  <string name="back">обратно</string>
  <string name="filters">фильтры</string>
  <string name="economy">1,эконом</string>
  <string name="watch_all_tickets">Посмотреть все билеты</string>
  <string name="direct_flights">Прямые рейсы</string>

  <string name="transfer">%1$sч в пути%2$s</string>
  <string name="no_transfer">/Без пересадок</string>
  <string name="route">%1$s-%2$s</string>
  <string name="date">%1$s, 1 пассажир</string>
  <string name="filter">Фильтр</string>
  <string name="statistic">График цен</string>

  <string name="сyrillic">АаБбВвГгДдЕеЁёЖжЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЪъЫыЬьЭэЮюЯя</string>
</resources>