<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/tvSearchTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/search_tickets"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/background_rounded16"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchTicket"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/grey4"
            app:cardCornerRadius="16dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_search" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etFrom"
                        style="@style/tv16Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/hint_from"
                        android:inputType="textCapSentences"
                        android:paddingStart="1dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey6" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey5" />

                    <TextView
                        android:id="@+id/etTo"
                        style="@style/tv16Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/hint_to"
                        android:paddingStart="1dp"
                        android:paddingTop="8dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey6" />

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

    <TextView
        android:id="@+id/titleMusic"
        style="@style/tv22Sembold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_music"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOffers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titleMusic" />

</androidx.constraintlayout.widget.ConstraintLayout>