<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".searchTickets.SearchTicketsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="47dp"
        app:cardBackgroundColor="@color/grey3"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <EditText
                        android:id="@+id/etFrom"
                        style="@style/tv16Regular"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:background="@null"
                        android:hint="@string/hint_from"
                        android:inputType="textCapSentences"
                        android:paddingStart="1dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey6"
                        app:layout_constraintEnd_toStartOf="@+id/ivSwop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivSwop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_swop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey5" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp">

                    <EditText
                        android:id="@+id/etTo"
                        style="@style/tv16Regular"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:background="@null"
                        android:hint="@string/hint_to"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey6"
                        app:layout_constraintEnd_toStartOf="@+id/ivClose"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_close"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <HorizontalScrollView
        android:id="@+id/filterList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:scrollbarSize="0dp"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded50"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp">

                <ImageView
                    android:id="@+id/ivAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_add" />

                <TextView
                    android:id="@+id/tvBack"
                    style="@style/tv14Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/background_rounded50"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/date"
                    style="@style/tv14Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="24 фев, cб"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/background_rounded50"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_profile_search" />

                <TextView
                    style="@style/tv14Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/economy"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_rounded50"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_filter" />

                <TextView
                    style="@style/tv14Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/filters"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_rounded16"
        android:backgroundTint="@color/grey1"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/filterList"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            style="@style/tv20Sembold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direct_flights"
            android:textColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTicketOffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnWatchAllTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/watch_all_tickets"
        android:textAppearance="@style/tv16Regular"
        android:insetRight="0dp"
        android:insetTop="0dp"
        android:insetLeft="0dp"
        android:insetBottom="0dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>